# dokkenfig

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt
src/cpp/lib/: BasicPredicates.cpp  CMakeLists.txt  Common.cpp  NoConsistencyCheck.cpp  NumericValidator.cpp  PlatformRestrictionValidator.cpp  RangeValidator.cpp  ValidationError.cpp
src/cpp/lib/include/: ConfigurationHandlerInterface.h  ConsistencyValidatorInterface.h  DefaultInterface.h  PlatformValidatorInterface.h  PredicateInterface.h
src/cpp/test/lib/: AnyPlatformValidatorTest.cpp  NoConsistencyCheckTest.cpp  NumericValidatorTest.cpp  PlatformRestrictionValidatorTest.cpp  ValueOfExpressionTest.cpp
src/lib/: AnyPlatformValidator.cpp  BasicExpressions.cpp  CMakeLists.txt  Common.cpp  DiscreteNumericValidator.cpp  RangeValidator.cpp
src/lib/include/: ConfigurationHandlerInterface.h  ConfigurationInterface.h  DefaultInterface.h  DiscreteNumericValidator.h  ExpressionInterface.h  Option.h  OptionInterface.h  PredicateInterface.h  RangeValidator.h  SchemaInterface.h  Types.h  ValidationError.h  ValidatorInterface.h
src/lib/include/consistency_validators/: NoConsistencyCheck.h
src/lib/include/expressions/: BasicExpressions.h
src/lib/include/platform_validators/: AnyPlatformValidator.h
src/test/lib/: AnyPlatformValidatorTest.cpp  CMakeLists.txt  DiscreteNumericValidatorTest.cpp  PlatformRestrictionValidatorTest.cpp  RangeValidatorTest.cpp
src/test/lib/mock/: MockConfiguration.h  MockOption.h  MockValidator.h
(+5 files in other folders)
